# libvmod-geoip-city

./: Makefile.am  README.rst  configure.ac  vmod-geoip-city.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_geoip_city.c  vmod_geoip_city.vcc
src/tests/: test01.vtc
